Tue Jun 12 18:48:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/DpShutdown/dpshutdown.cpp:
          Fixed compile errors when DDS_HAS_MINIMUM_BIT has been defined

Tue Jun 12 18:41:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/QOS_XML_Handler/QOS_XML_Loader.cpp:
        * dds/DCPS/QOS_XML_Handler/XML_File_Intf.cpp:
          Make all error output dependent on log level

        * tests/DCPS/DomainParticipantId/DomainParticipantId.mpc:
          Shortened project name

Tue Jun 12 18:28:21 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
          Replaced tabs with spaces.

Tue Jun 12 17:41:48 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          Added rejection checking and notification for data readers.

        * tests/DCPS/Rejects:
        * tests/DCPS/Rejects/DataReaderListener.cpp:
        * tests/DCPS/Rejects/DataReaderListener.h:
        * tests/DCPS/Rejects/Messenger.idl:
        * tests/DCPS/Rejects/pub.ini:
        * tests/DCPS/Rejects/publisher.cpp:
        * tests/DCPS/Rejects/README:
        * tests/DCPS/Rejects/Rejects.mpc:
        * tests/DCPS/Rejects/Rejects_export.h:
        * tests/DCPS/Rejects/rtps_disc.ini:
        * tests/DCPS/Rejects/run_test.pl:
        * tests/DCPS/Rejects/sub.ini:
        * tests/DCPS/Rejects/subscriber.cpp:
        * tests/DCPS/Rejects/Writer.cpp:
        * tests/DCPS/Rejects/Writer.h:

          Added test that checks for rejections due to exceeding max_samples
          max_instances, and max_samples_per_instance.

Tue Jun 12 15:21:29 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Move reactor initialization from ctor to
          get_domain_participant_factory() to avoid
          static initialization ordering issues
          for DCPSInfoRepo under Windows.

Mon Jun 11 15:16:59 UTC 2012  Adam Mitz  <mitza@ociweb.com>
